test/fixtures/esprima/invalid-syntax/.migrated_0163/actual.js
var source = '\\u005c';
